# ah-bonus-bot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  renovate.json  template.env
.sqlx/: query-0e66b91e99939ba44af66867e84f3e5470d4cfb266921a71aa342e869c1e06f9.json  query-3cc55a08b750fde225751260c2fe14e8d96e6c111487423ca13a5cb5e76846eb.json  query-5b6d28ba45e62ff2b5109c7143476816f33cbacbcedec0ecb39ac99676486e15.json  query-64c2e7e8bdb39bc2792ccdffee57c721efb86b31c8fbece0f80a6573cc1abaec.json  query-6e1cecdd27307717adc53ef40fc84e34bba1ee0c619d13942f0410a201bdcef5.json  query-892018f29df89c220aec4923bb4e8eefccfd3fd59905b7e4ee1b1c656c21a30e.json  query-8e260b113afea36d5a4eafc63f7aebe9b23718b0c89f6134850d25fe4ad8d804.json  query-a42377093dc95c63be3c1444f5fd5329b3640124ce05b7d41451c8bcfd5004a5.json  query-c54859cd7ccf55adcaa4c92cde4d4505f7d9f796d68b4e0fea611d66edcdffe8.json  query-d3ba847f4e9a5f19be626c08f64549e14bde978b095787c9ab36e9ef58b12e19.json  query-dcfec8242f5534a7c1f6b91c74aa3f9b9b8f9d0763c8f7ffacf3afe6ed4bec77.json  query-f9ab9e5aec532ab865f32a5f420177e7594e352bc722469670892fdf5efc1835.json
crates/ah_api/: Cargo.toml  README.md
crates/ah_api/src/: client.rs  fetch.rs  global_search.rs  lib.rs  product.rs  search.rs
crates/telegram_bot/: Cargo.toml
crates/telegram_bot/src/: bot.rs  db.rs  errors.rs  notify.rs
crates/telegram_bot/src/queries/: delete_product_tracking.sql  insert_product.sql  insert_product_history.sql  insert_tracking.sql  select_products_for_notification.sql  select_tracked_products.sql  select_users_not_notified.sql
etc/: bot.service  notify.service  notify.timer
migrations/: 20230430191045_init.down.sql  20230430191045_init.up.sql  20230505175745_bonus_period.down.sql  20230505175745_bonus_period.up.sql
(+1 files in other folders)
