[package]
name = "ah_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json", "gzip", "cookies"] }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
pretty_env_logger = "0.5"
