[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/bot.rs"

[[bin]]
name = "notify"
path = "src/notify.rs"

[dependencies]
ah_api = { path = "../ah_api" }

sqlx = { version = "0.7.0-alpha.3", features = [
  "runtime-tokio",
  "sqlite",
  "json",
  "macros",
  "time",
] }
time = "0.3"

# CLI arguments
clap = { version = "4.3.3", features = ["derive"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros", "throttle"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }

url = "2.4.0"
